--- a/Flaintartist/Info.plist
+++ b/Flaintartist/Info.plist
@@ -27,12 +27,14 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
-    <key>NSLocationWhenInUseUsageDescription</key>
-    <string>FlaintArtist uses this to customize your experience and let you explore more beauty around you.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>FlaintArtist would to have access to your Microphone.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>FlaintArtist uses this to customize your experience and let you explore more beauty around you.</string>
 	<key>NSCameraUsageDescription</key>
-	<string>Flaint would to have access to your Camera.</string>
+	<string>FlaintArtist would to have access to your Camera.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Flaint would to have access to your Photo.</string>
+	<string>FlaintArtist would to have access to your Photo.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
