--- a/Flaintartist/Info.plist
+++ b/Flaintartist/Info.plist
@@ -27,12 +27,12 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
-	<key>NSCameraUsageDescription</key>
-	<string>FlaintArtist would to have access to your Camera.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>FlaintArtist uses this to customize your experience and let you explore more beauty around you.</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>FlaintArtist would to have access to your Microphone.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>FlaintArtist would to have access to your Camera.</string>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>FlaintArtist would like to have access to your Media Library.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>FlaintArtist would to have access to your Photo.</string>
 	<key>UILaunchStoryboardName</key>
